"fixed overflowing exit sidebar btn on safari, by declaring a constant padding and aligning text to center"

--- a/frontend/src/app/components/sideBar/_sidebar.scss
+++ b/frontend/src/app/components/sideBar/_sidebar.scss
@@ -145,6 +145,8 @@
     left: 10.6rem;
     color: $darkest-gray;
     font-size: 1.5rem;
+    padding: 0.15rem 0.35rem;
+    text-align: center;
     border: 1px rgba(0,0,0,0) solid;
     display: flex; 
     align-items: center;
